# PIS-utils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pis_utils/: __init__.py  cli.py  config.py  config.toml
src/pis_utils/commands/: __init__.py  conda.py  install.py  uninstall.py  vscode.py
src/pis_utils/core/: __init__.py  console.py  download.py  platform.py
tests/: conftest.py  test_cli.py
tests/commands/: test_conda.py  test_vscode.py
tests/core/: test_download.py  test_platform.py
