[project]
name = "pis-utils"
version = "0.1.3"
description = "CLI for installing VS Code and Miniforge3 at DTU"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Philip Korsager Nickel", email = "philipnickel@outlook.dk"}
]
keywords = ["vscode", "python", "installation", "dtu", "education", "conda", "miniforge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "platformdirs>=4.0.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/philipnickel/PIS-utils"
Repository = "https://github.com/philipnickel/PIS-utils"
Issues = "https://github.com/philipnickel/PIS-utils/issues"

[project.scripts]
pis-utils = "pis_utils.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pis_utils"]

# ── Testing ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=pis_utils",
    "--cov-report=term-missing",
]

# ── Linting ───────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]  # B008: typer.Option() in defaults is required by typer's API

# ── Type Checking ─────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
